# oak-build

./: .gitignore  README.md  oak_file.py  pyproject.toml
.github/workflows/: release.yaml  test.yaml
integration_tests/: base_test.py  test_oak_app.py  test_tools.py
integration_tests/resources/argument_passing/: oak_file.py
integration_tests/resources/file_creator/: oak_file.py
integration_tests/resources/file_import/: oak_file.py  task_1.py
integration_tests/resources/file_import/task_2/: task_2.py
integration_tests/resources/param_passing/: oak_file.py
integration_tests/resources/params/: oak_file.py
integration_tests/resources/shell_run/: oak_file.py
src/oak_build/: __init__.py  app.py  direcory_exec_context.py  main.py  oak_file.py  parsers.py  task_runner.py
tests/: base_test.py  test_oak_file.py  test_parsers.py  test_task_runner.py
tests/resources/: oak_file_with_aliases.py  oak_file_with_dependencies.py  oak_file_with_illegal_aliases.py  simple_oak_file.py
