[tool.poetry]
name = "oak-build"
version = "0.1.0"
description = ""
authors = ["Kirill Sulim <kirillsulim@gmail.com>"]
readme = "README.md"
packages = [{include = "oak_build", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rusty-results = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
